tambah lib room

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Amikom Center Crud Kotlin</string>
+    <string name="lorem">this is me</string>
 </resources>
